Confirmar Segunda Version

--- a/formularios.html
+++ b/formularios.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <h1>Formularios</h1>
+  <h1>Formularios en HTML5</h1>
   <form action="https://formspree.io/leyder.gil@gmail.com" method="post">
     <!-- INPUTS Y LABELS -->
     <input type="hidden" name="algo oculto" id="oculto" value="Esto es un mensaje de soporte">
