Adicionando algo a un Input

--- a/formularios.html
+++ b/formularios.html
@@ -14,7 +14,7 @@
     <!-- INPUTS Y LABELS -->
     <input type="hidden" name="algo oculto" id="oculto" value="Esto es un mensaje de soporte">
     <p>
-      <label for="nombreid">Nombre:</label>
+      <label for="nombreid">Nombres:</label>
       <input type="text" name="nombre" id="nombreid" placeholder="Ingrese su nombre" size="50" required>
     </p>
     <p>
