--- a/formularios.html
+++ b/formularios.html
@@ -74,6 +74,7 @@
       <input type="submit" value="Enviar">
       <input type="reset" value="Borrar todo">
     </p>
+    <p><b>Esto es una negrita en una <code>&lt;p&gt;</code> </b></p>
   </form>
 </body>
 </html>
