Correcciones de validacion W3C

--- a/formularios.html
+++ b/formularios.html
@@ -27,7 +27,7 @@
     </p>
     <p>
       <label for="fecha">Fecha:</label>
-      <input type="date" name="fecha" id="fecha" placeholder="Ingrese su fecha de nacimiento">
+      <input type="date" name="fecha" id="fecha">
     </p>
       <!-- CHECBOX -->
     <p>
@@ -36,7 +36,7 @@
     </p>
       <!-- RADIO BUTTON -->
     <p>
-      <label for="">Asunto</label>
+      <label>Asunto</label>
     <!-- El label con su atributo for="igual al id del input" me sirve para que al dar click en el texto al lado del input este se marque-->
       <br>
       <input type="radio" name="asunto" id="error" value="Error encontrado"> <label for="error">Error encontrado</label>
@@ -68,13 +68,13 @@
     </p>
     <p>
       <label for="horarespuesta">Respuesta hasta:</label>
-      <input type="time" name="horarespuesta" id="horarespuesta" placeholder="Hora para la respuesta">
+      <input type="time" name="horarespuesta" id="horarespuesta">
     </p>
     <p>
       <input type="submit" value="Enviar">
       <input type="reset" value="Borrar todo">
     </p>
-    <p><b>Esto es una negrita en una <code>&lt;p&gt;</code> </b></p>
+    <p><b>!Esto es una negrita en una <code>&lt;p&gt;</code> </b></p>
   </form>
 </body>
 </html>
